--- a/1.html
+++ b/1.html
@@ -52,7 +52,7 @@
       <div class="player">
         
         <div>
-          <input type="range" style="pointer-events: none; "/>
+          <input type="range"/>
           <div></div>
         </div>
         <span>0:00</span>
