--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 										<a href="1.html" class="link primary"><img src="./images/1.gif" alt=""/></a>
 									</span>
 									<header class="major">
-										<h3>차분한 BGM 😐<sup style="font-size:10px">(Open!)</sup></h3>
+										<h3>메이플스토리 BGM 😐<sup style="font-size:10px">(Open!)</sup></h3>
 										<p>공부하거나 코딩을 하면서 잔잔하게 듣는</p>
 									</header>
 								</article>
                 <article>
 									<span class="image">
-									<a onclick="javascript:btn()" class="primary"><img src="./images/2.jpg" alt="" /></a>
+									<a onclick="javascript:btn()" class="primary"><img src="./images/2.gif" alt="" /></a>
 									</span>
 									<header class="major">
-										<h3>웅장한 BGM 😠</h3>
+										<h3>던전앤파이터 BGM 😠</h3>
 										<!--<p>웅장한 분위기를 느끼고 싶을 때</p>-->
                     <p>오픈예정입니다..🛠</p>
 									</header>
