--- a/1.html
+++ b/1.html
@@ -456,7 +456,7 @@
 
             <div class="library-song " id="100">
         <img
-          src="앨범/100.jpg"
+          src="앨범/100.gif"
           alt=""
         />
         <div class="library-song-info">
