--- a/1.html
+++ b/1.html
@@ -456,12 +456,12 @@
 
         <div class="library-song " id="101">
         <img
-          src="앨범/37.gif"
+          src="앨범/테라숲.png"
           alt=""
         />
         <div class="library-song-info">
-          <h3>Maple Story Login</h3>
-          <h4>로그인 화면 (구.ver)</h4>
+          <h3>Teraa Forest</h3>
+          <h4>테라숲</h4>
         </div>
       </div>  <div class="library-song " id="102">
         <img
