--- a/1.html
+++ b/1.html
@@ -456,11 +456,11 @@
 
         <div class="library-song " id="101">
         <img
-          src="앨범/테라숲.png"
+          src="앨범/테라숲.png"
           alt=""
         />
         <div class="library-song-info">
-          <h3>Teraa Forest</h3>
+          <h3>Tera Forest</h3>
           <h4>테라숲</h4>
         </div>
           
