--- a/1.html
+++ b/1.html
@@ -600,7 +600,7 @@
 </div>
 
 <div class="library-song" id="120">
-  <img src="앨범/10.jpg" alt="" />
+  <img src="앨범/10.JPG" alt="" />
   <div class="library-song-info">
     <h3>에레브: 전체</h3>
     <h4>에레브</h4>
@@ -608,7 +608,7 @@
 </div>
 
 <div class="library-song" id="121">
-  <img src="앨범/16.jpg" alt="" />
+  <img src="앨범/16.JPG" alt="" />
   <div class="library-song-info">
     <h3>엘나스: 마을</h3>
     <h4>엘나스</h4>
