--- a/1.html
+++ b/1.html
@@ -40,12 +40,12 @@
       </nav>
       <div class="song-info">
         <img
-          src="앨범/1.gif"
+          src="앨범/100.gif"
           alt=""
         />
         <div>
-          <h2>Night Market</h2>
-          <h3>세계여행 대만</h3>
+          <h2>Elin Forest</h2>
+          <h3>엘린</h3>
           <h5 STYLE ="text-align: center">1 / 61</h5>
         </div>
       </div>
@@ -56,7 +56,7 @@
           <div></div>
         </div>
         <span>0:00</span>
-        <span>2:38</span>
+        <span>2:20</span>
       </div>
       <div class="player-control">
         <i class="fas fa-backward" id="backward"></i>
@@ -68,7 +68,7 @@
         <input type="range" max="100" step="1" style="color:#adcaf2"/>
         <i class="fas fa-volume-up" style="color:#adcaf2"></i>
       </div>
-      <audio src="./노래/1.mp3"></audio>
+      <audio src="./노래/100.mp3"></audio>
     </div>
     <div class="library">
       <h2 align="center" class="sticky" style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">재생목록</h2>
