--- a/1.html
+++ b/1.html
@@ -45,7 +45,7 @@
         />
         <div>
           <h2>Elin Forest</h2>
-          <h3>엘린</h3>
+          <h3>엘린숲</h3>
           <h5 STYLE ="text-align: center">1 / 61</h5>
         </div>
       </div>
