--- a/1.html
+++ b/1.html
@@ -126,9 +126,11 @@
       </div>  
       <div class="library-song" id="6">
   <img src="앨범/무릉.png" alt="" />
-드</h3>
+  <div class="library-song-info">
+    <h3>무릉도원: 필드</h3>
     <h4>무릉도원</h4>
   </div>
+</div>
       <div class="library-song" id="7">
   <img src="앨범/무릉.png" alt="" />
   <div class="library-song-info">
