--- a/1.html
+++ b/1.html
@@ -35,7 +35,7 @@
       <h8 id="toast2"></h8>
       <nav>
         <a href="javascript:history.back();"><button class="mdc-icon-button material-icons">arrow_back</button></a>
-        <h4>차분한 BGM</h4>
+        <h4>메이플스토리 BGM</h4>
          <a href="javascript:;" class="btn-menu" id="library-link" style="z-index:1;" onclick="toast('↕ 위 아래로 스크롤')"></a>
       </nav>
       <div class="song-info">
